--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="bookletApp">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
+  <title>CFIR Booklet</title>
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
@@ -13,7 +13,7 @@
 
   <div ng-view></div>
 
-  <div>Angular seed app: v<span app-version></span></div>
+  <div>CFIR Booklet app: v<span app-version></span></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
@@ -25,5 +25,7 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+  <script src="data/taxonomy.js"></script>
+  <script src="http://localhost:9090/livereload.js"></script>
 </body>
 </html>
