--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
       <ul class="sidebar-nav">
         <li class="sidebar-brand"><a href="#/">Intro</a></li>
         <li class="sidebar-brand"><a href="#/domain">Domains</a></li>
-        <!--<li ng-repeat="(key, value) in domains | orderObjectBy: value.id">-->
+        <!--<li ng-repeat="(key, value) in taxonomy | orderObjectBy: value.id">-->
         <li class="sidebar-item" ng-repeat="(key, value) in domains">
           <a ng-href="#/selected_domain/{{key}}">
             {{value.name}}
