--- a/app/guide.html
+++ b/app/guide.html
@@ -16,7 +16,7 @@
           <h5>{{domain.name}}</h5>
         </div>
         <div class="panel-body" ng-repeat="(constructName, construct) in domain.constructs">
-          <h6 class="panel-"><b>{{construct.name}}</b></h6>
+          <h6 class="panel-primary"><b>{{construct.name}}</b></h6>
           <ol>
             <li ng-repeat="question in construct.questions">
               {{question.text}}
