--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,8 @@
   <title>CFIR Booklet</title>
   <link rel="stylesheet" href="css/app.css"/>
   <link rel="stylesheet" href="css/bootstrap.css" />
+  <link rel="stylesheet" href="../bower_components/ngDialog/css/ngDialog.min.css">
+  <link rel="stylesheet" href="../bower_components/ngDialog/css/ngDialog-theme-default.min.css">
   <script src="../bower_components/jquery/dist/jquery.js"></script>
   <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 </head>
@@ -31,7 +33,7 @@
         <li class="sidebar-brand"><a href="#/">Intro</a></li>
         <li class="sidebar-brand"><a href="#/domain">Domains</a></li>
         <li class="sidebar-item" ng-repeat="(idx, domain) in domains">
-          <a ng-href="#/selected_domain/{{idx}}">
+          <a ng-href="#/selected_domain/{{idx}}" ng-click="setSelectedDomain(idx)">
             {{domain.name}}
           </a>
         </li>
@@ -48,9 +50,10 @@
 
   <script src="../bower_components/angular/angular.js"></script>
   <script src="../bower_components/angular-route/angular-route.js"></script>
-  <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
+  <script src="../bower_components/ngDialog/js/ngDialog.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="js/services.js"></script>
   <script src="http://localhost:9090/livereload.js"></script>
 </body>
 </html>
