--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,6 @@
   <title>CFIR Booklet</title>
   <link rel="stylesheet" href="css/app.css"/>
   <link rel="stylesheet" href="css/bootstrap.css" />
-  <link rel="stylesheet" href="../bower_components/ngDialog/css/ngDialog.min.css">
-  <link rel="stylesheet" href="../bower_components/ngDialog/css/ngDialog-theme-default.min.css">
   <script src="../bower_components/jquery/dist/jquery.js"></script>
   <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 </head>
@@ -50,7 +48,7 @@
 
   <script src="../bower_components/angular/angular.js"></script>
   <script src="../bower_components/angular-route/angular-route.js"></script>
-  <script src="../bower_components/ngDialog/js/ngDialog.min.js"></script>
+  <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/services.js"></script>
