--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/services.js"></script>
+  <script src="data/taxonomy.js"></script>
   <script src="http://localhost:9090/livereload.js"></script>
 </body>
 </html>
