--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,6 @@
   <title>CFIR Booklet</title>
   <link rel="stylesheet" href="css/app.css"/>
   <link rel="stylesheet" href="css/bootstrap.css" />
-  <script src="../bower_components/jquery/dist/jquery.js"></script>
-  <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 </head>
 <body ng-controller="DomainsCtrl">
   <div class="masthead">
@@ -31,7 +29,7 @@
         <li class="sidebar-brand"><a href="#/">Intro</a></li>
         <li class="sidebar-brand"><a href="#/domain">Domains</a></li>
         <li class="sidebar-item" ng-repeat="(idx, domain) in domains">
-          <a ng-href="#/selected_domain/{{idx}}" ng-click="setSelectedDomain(idx)">
+          <a ng-href="#/selected_domain/{{idx}}" ng-click="setCurrentDomain(idx)">
             {{domain.name}}
           </a>
         </li>
@@ -49,6 +47,8 @@
   <script src="../bower_components/angular/angular.js"></script>
   <script src="../bower_components/angular-route/angular-route.js"></script>
   <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
+  <script src="../bower_components/jquery/dist/jquery.js"></script>
+  <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/services.js"></script>
