--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
           </a>
         </li>
         <li class="sidebar-brand"><a href="#/guide">Get Guide</a></li>
+        <li class="sidebar-brand"><a href="#" ng-click="reset()">Reset</a></li>
       </ul>
     </div>
 
