New intro page.

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
           </a>
         </li>
         <li class="sidebar-brand"><a href="#/guide">Get Guide</a></li>
-        <li class="sidebar-brand"><a href="#" ng-click="reset()">Reset</a></li>
+        <li class="sidebar-brand"><a href="#" ng-click="reset()">Start Over</a></li>
       </ul>
     </div>
 
@@ -53,6 +53,6 @@
   <script src="js/controllers.js"></script>
   <script src="js/services.js"></script>
   <script src="data/taxonomy.js"></script>
-  <script src="http://localhost:9090/livereload.js"></script>
+  <script src="http://localhost:9091/livereload.js"></script>
 </body>
 </html>
