--- a/app/guide.html
+++ b/app/guide.html
@@ -7,22 +7,18 @@
   <link rel="stylesheet" href="css/bootstrap.css" />
   <script src="../bower_components/jquery/dist/jquery.js"></script>
   <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="../bower_components/angular/angular.js"></script>
+  <script src="../bower_components/angular-route/angular-route.js"></script>
+  <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/controllers.js"></script>
+  <script src="js/services.js"></script>
+  <script src="data/taxonomy.js"></script>
+  <script src="http://localhost:9090/livereload.js"></script>
 </head>
-<body ng-controller="GuideCtrl">
-  <div class="masthead">
-    <table class="table">
-      <tr>
-        <td>
-          <img src="img/logo.png" />
-        </td>
-        <td>
-          <h3>Interview Guide</h3>
-        </td>
-      </tr>
-    </table>
-  </div>
+<body>
 
-  <div id="the_guide">
+  <div ng-controller="GuideCtrl" id="the_guide">
     <span ng-repeat="domain in guide()" ng-show="domain.selected">
       <div class="panel panel-primary">
         <div class="panel-heading">
@@ -88,20 +84,9 @@
               </li>
             </ol>
           </div>
-          
         </div>  <!-- panel-body: constructs -->
       </div>  <!-- panel-primary -->
     </span> <!-- domains -->
   </div>
-
-  <script src="../bower_components/angular/angular.js"></script>
-  <script src="../bower_components/angular-route/angular-route.js"></script>
-  <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/services.js"></script>
-  <script src="data/taxonomy.js"></script>
-  <script src="http://localhost:9090/livereload.js"></script>
-
 </body>
 </html>
