--- a/app/index.html
+++ b/app/index.html
@@ -7,41 +7,39 @@
   <link rel="stylesheet" href="css/bootstrap.css" />
 </head>
 <body ng-controller="DomainsCtrl">
-  <div class="masthead">
-    <table class="table">
-      <tr>
-        <td>
-          <img src="img/logo.png" />
-        </td>
-        <td>
-          <h3>Interview Guide</h3>
-        </td>
-      </tr>
-    </table>
-  </div>
-
-  <div id="wrapper">
-
-    <!-- Sidebar -->
-    <div id="sidebar-wrapper">
-      <ul class="sidebar-nav">
-        <li class="sidebar-brand"><a href="#/">Intro</a></li>
-        <li class="sidebar-brand"><a href="#/domain">Domains</a></li>
-        <li class="sidebar-item" ng-repeat="(idx, domain) in domains">
-          <a ng-href="#/selected_domain/{{idx}}" ng-click="setCurrentDomain(idx)">
-            {{domain.name}}
-          </a>
-        </li>
-        <li class="sidebar-brand"><a href="#/guide">Get Guide</a></li>
-        <li class="sidebar-brand"><a href="#" ng-click="reset()">Start Over</a></li>
-      </ul>
+  <nav id="myNavbar" class="navbar navbar-default navbar-inverse navbar-fixed-top"
+        role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse"
+              data-target="index#navbarCollapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#/">CFIR Guide</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="nav navbar-nav">
+            <li class="active">
+              <a href="#/guide_select">Selections</a>
+            </li>
+            <li>
+              <a href="#/guide">Get Guide</a>
+            </li>
+            <li>
+              <a href="#/guide_select" ng-click="reset()">Start Over</a>
+            </li>
+          </ul>
+      </div>
     </div>
+  </nav>
 
-    <!-- Page content -->
-    <div id="page-content-wrapper">
-      <div ng-view></div>
-    </div>
-
+  <!-- Page content -->
+  <div id="page-content-wrapper">
+    <div ng-view></div>
   </div>
 
   <script src="../bower_components/angular/angular.js"></script>
