--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/app.css"/>
   <link rel="stylesheet" href="css/bootstrap.css" />
 </head>
-<body ng-controller="DomainsCtrl">
+<body ng-controller="NavCtrl">
   <nav id="myNavbar" class="navbar navbar-default navbar-inverse navbar-fixed-top"
         role="navigation">
     <div class="container-fluid">
@@ -23,7 +23,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="nav navbar-nav">
-            <li class="active">
+            <li>
               <a href="#/guide_select">Selections</a>
             </li>
             <li>
@@ -44,7 +44,7 @@
 
   <script src="../bower_components/angular/angular.js"></script>
   <script src="../bower_components/angular-route/angular-route.js"></script>
-  <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
+  <script src="../bower_components/angular-local-storage/angular-local-storage.min.js"></script>
   <script src="../bower_components/jquery/dist/jquery.js"></script>
   <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="js/app.js"></script>
