Cleaned up, just needs testing.

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
               <a href="#/guide">Get Guide</a>
             </li>
             <li>
-              <a href="#/guide_select" ng-click="reset()">Start Over</a>
+              <a href="http://cfirwiki.net/site">Main Site</a>
             </li>
           </ul>
       </div>
