--- a/app/guide.html
+++ b/app/guide.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="css/app.css"/>
   <link rel="stylesheet" href="css/bootstrap.css" />
 </head>
-<body>
+<body style="padding-top:0px">
+  <h2>CFIR Guide</h2>
   <div ng-controller="GuideCtrl" id="the_guide">
     <span ng-repeat="domain in guide()">
       <div class="panel panel-primary">
