--- a/app/index.html
+++ b/app/index.html
@@ -18,19 +18,22 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#/">CFIR Guide</a>
+        <a class="navbar-brand" href="#/" style="color:white">CFIR Guide</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="nav navbar-nav">
             <li>
-              <a href="#/guide_select">Selections</a>
+              <a href="#/guide_select" style="color:white">Choose Interview Questions</a>
             </li>
             <li>
-              <a href="#/guide">Get Guide</a>
+              <a href="#/guide" style="color:white">Get Guide</a>
             </li>
             <li>
-              <a href="http://cfirwiki.net/site">Main Site</a>
+              <a href="#/" style="color:white" ng-click="reset()">Start Over</a>
+            </li>
+            <li>
+              <a href="http://cfirwiki.net/site" style="color:white">Main Site</a>
             </li>
           </ul>
       </div>
