--- a/app/guide.html
+++ b/app/guide.html
@@ -8,8 +8,8 @@
 </head>
 <body style="padding-top:0px">
   <h2>CFIR Guide</h2>
-  <div ng-controller="GuideCtrl" id="the_guide">
-    <span ng-repeat="domain in guide()">
+  <div ng-controller="GuideCtrl" ng-init="loadGuide()">
+    <span ng-repeat="domain in guide">
       <div class="panel panel-primary">
         <div class="panel-heading">
           <h5>{{domain.name}}</h5>
